// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseAhoXml converts AnnotatedHO1 XML to Aho 1`] = `
{
  "AnnotatedHearingOutcome": {
    "HearingOutcome": {
      "Case": {
        "CourtCaseReferenceNumber": "97/1626/008395Q",
        "CourtReference": {
          "MagistratesCourtReference": "01ZD0303208",
        },
        "ForceOwner": {
          "BottomLevelCode": "00",
          "OrganisationUnitCode": "01ZD00",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "ZD",
          "TopLevelCode": undefined,
        },
        "HearingDefendant": {
          "Address": {
            "AddressLine1": "Scenario1 Address Line 1",
            "AddressLine2": "Scenario1 Address Line 2",
            "AddressLine3": "Scenario1 Address Line 3",
            "AddressLine4": undefined,
            "AddressLine5": undefined,
          },
          "ArrestSummonsNumber": "1101ZD0100000448754K",
          "BailConditions": [],
          "CourtPNCIdentifier": undefined,
          "DefendantDetail": {
            "BirthDate": 1948-11-11T00:00:00.000Z,
            "Gender": 1,
            "GeneratedPNCFilename": "SEXOFFENCE/TRPR  FOUR",
            "PersonName": {
              "FamilyName": "SEXOFFENCE",
              "GivenName": [
                "TRPR FOUR",
              ],
              "Title": "Mr and Mrs",
            },
          },
          "Offence": [
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2010-11-28T00:00:00.000Z,
              },
              "ActualOffenceWording": "Attempt to rape a girl aged 13 / 14 / 15 / years of age - SOA 2003.",
              "AddedByTheCourt": undefined,
              "AlcoholLevel": undefined,
              "ArrestDate": 2010-12-01T00:00:00.000Z,
              "ChargeDate": 2010-12-02T00:00:00.000Z,
              "CommittedOnBail": "D",
              "ConvictionDate": 2011-09-26T00:00:00.000Z,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 1,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "K",
                  "DefendantOrOffenderSequenceNumber": "00000448754",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "01",
                    "OrganisationUnitCode": "01ZD01",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "ZD",
                    "TopLevelCode": undefined,
                  },
                  "Year": "11",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "SX",
                    "FullCode": "SX03001A",
                    "Qualifier": "A",
                    "Reason": "001",
                    "Year": "03",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": "001",
              },
              "HomeOfficeClassification": "019/11",
              "LocationOfOffence": "Kingston High Street",
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": true,
              "OffenceCategory": "CI",
              "OffenceTitle": "Attempt to rape a girl aged 13 / 14 / 15 years of age - SOA 2003",
              "RecordableOnPNCindicator": true,
              "Result": [
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 3078,
                  "ConvictingCourt": undefined,
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": "SUM",
                  "NextCourtType": undefined,
                  "NextHearingDate": undefined,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 3078,
                  "PleaStatus": "NG",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Judgement with final result",
                  "ResultHalfLifeHours": 72,
                  "ResultHearingDate": 2011-09-26T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [
                    {
                      "Code": "GB",
                      "Duration": {
                        "DurationLength": 30,
                        "DurationType": "Custodial",
                        "DurationUnit": "D",
                      },
                    },
                  ],
                  "ResultVariableText": "Travel Restriction Order",
                  "SourceOrganisation": {
                    "BottomLevelCode": "01",
                    "OrganisationUnitCode": "B01EF01",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "EF",
                    "TopLevelCode": "B",
                  },
                  "Urgent": undefined,
                  "Verdict": "G",
                  "WarrantIssueDate": undefined,
                },
              ],
            },
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2010-11-28T00:00:00.000Z,
              },
              "ActualOffenceWording": "Rape of a Female",
              "AddedByTheCourt": undefined,
              "AlcoholLevel": undefined,
              "ArrestDate": 2010-12-01T00:00:00.000Z,
              "ChargeDate": 2010-12-02T00:00:00.000Z,
              "CommittedOnBail": "D",
              "ConvictionDate": 2011-09-26T00:00:00.000Z,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 2,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "K",
                  "DefendantOrOffenderSequenceNumber": "00000448754",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "01",
                    "OrganisationUnitCode": "01ZD01",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "ZD",
                    "TopLevelCode": undefined,
                  },
                  "Year": "11",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "SX",
                    "FullCode": "SX03001",
                    "Qualifier": undefined,
                    "Reason": "001",
                    "Year": "03",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": "002",
              },
              "HomeOfficeClassification": "019/07",
              "LocationOfOffence": "Kingston High Street",
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": true,
              "OffenceCategory": "CI",
              "OffenceTitle": "Rape a girl aged 13 / 14 / 15 - SOA 2003",
              "RecordableOnPNCindicator": true,
              "Result": [
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 3052,
                  "ConvictingCourt": undefined,
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": "SUM",
                  "NextCourtType": undefined,
                  "NextHearingDate": undefined,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 3052,
                  "PleaStatus": "NG",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Judgement with final result",
                  "ResultHalfLifeHours": 24,
                  "ResultHearingDate": 2011-09-26T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [],
                  "ResultVariableText": "defendant must never be allowed out",
                  "SourceOrganisation": {
                    "BottomLevelCode": "01",
                    "OrganisationUnitCode": "B01EF01",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "EF",
                    "TopLevelCode": "B",
                  },
                  "Urgent": {
                    "urgency": 24,
                    "urgent": true,
                  },
                  "Verdict": "G",
                  "WarrantIssueDate": undefined,
                },
              ],
            },
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2010-11-28T00:00:00.000Z,
              },
              "ActualOffenceWording": "Use a motor vehicle without third party insurance.",
              "AddedByTheCourt": undefined,
              "AlcoholLevel": undefined,
              "ArrestDate": 2010-12-01T00:00:00.000Z,
              "ChargeDate": 2010-12-02T00:00:00.000Z,
              "CommittedOnBail": "D",
              "ConvictionDate": 2011-09-26T00:00:00.000Z,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 3,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "K",
                  "DefendantOrOffenderSequenceNumber": "00000448754",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "01",
                    "OrganisationUnitCode": "01ZD01",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "ZD",
                    "TopLevelCode": undefined,
                  },
                  "Year": "11",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "RT",
                    "FullCode": "RT88191",
                    "Qualifier": undefined,
                    "Reason": "191",
                    "Year": "88",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": "003",
              },
              "HomeOfficeClassification": "809/01",
              "LocationOfOffence": "Kingston High Street",
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": false,
              "OffenceCategory": "CM",
              "OffenceTitle": "Use a motor vehicle on a road / public place without third party insurance",
              "RecordableOnPNCindicator": false,
              "Result": [
                {
                  "AmountSpecifiedInResult": [
                    {
                      "Amount": 100,
                      "DecimalPlaces": 2,
                      "Type": "Fine",
                    },
                  ],
                  "BailCondition": [],
                  "CJSresultCode": 1015,
                  "ConvictingCourt": undefined,
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": "SUM",
                  "NextCourtType": undefined,
                  "NextHearingDate": undefined,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 1015,
                  "PleaStatus": "NG",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Judgement with final result",
                  "ResultHalfLifeHours": 72,
                  "ResultHearingDate": 2011-09-26T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [],
                  "ResultVariableText": "Fined 100.",
                  "SourceOrganisation": {
                    "BottomLevelCode": "01",
                    "OrganisationUnitCode": "B01EF01",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "EF",
                    "TopLevelCode": "B",
                  },
                  "Urgent": undefined,
                  "Verdict": "G",
                  "WarrantIssueDate": undefined,
                },
              ],
            },
          ],
          "OrganisationName": undefined,
          "PNCCheckname": "SEXOFFENCE",
          "PNCIdentifier": "2000/0448754K",
          "ReasonForBailConditions": undefined,
          "RemandStatus": "UB",
        },
        "ManualForceOwner": undefined,
        "PTIURN": "01ZD0303208",
        "PenaltyNoticeCaseReferenceNumber": undefined,
        "PreChargeDecisionIndicator": false,
        "RecordableOnPNCindicator": true,
        "Urgent": {
          "urgency": 24,
          "urgent": true,
        },
      },
      "Hearing": {
        "CourtHearingLocation": {
          "BottomLevelCode": "01",
          "OrganisationUnitCode": "B01EF01",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "EF",
          "TopLevelCode": "B",
        },
        "CourtHouseCode": 2576,
        "CourtHouseName": "London Croydon",
        "CourtType": "MCA",
        "DateOfHearing": 2011-09-26T00:00:00.000Z,
        "DefendantPresentAtHearing": "A",
        "HearingDocumentationLanguage": "D",
        "HearingLanguage": "D",
        "SourceReference": {
          "DocumentName": "SPI TRPR  FOUR SEXOFFENCE",
          "DocumentType": "SPI Case Result",
          "UniqueID": "CID-8bc6ee0a-46ac-4a0e-b9be-b03e3b041415",
        },
        "TimeOfHearing": "10:00",
      },
    },
  },
  "Exceptions": [
    {
      "code": "HO100403",
      "message": "I5005 - WARNING - REMAND INFORMATION INDICATES THAT THE SUBJECT WAS ON BAIL AT THE TIME OFFENCE 000 ENTERED FOR ARREST/SUMMONS 24/0000/00/0000000G ON RECORD PNCID/CHECKNAME: 24/000000M XXXXXXX WAS COMMITTED - CHECK DETAILS AND AMEND RECORD AS NECESSARY",
      "path": [
        "AnnotatedHearingOutcome",
        "HearingOutcome",
        "Case",
        "HearingDefendant",
        "ArrestSummonsNumber",
      ],
    },
    {
      "code": "HO100402",
      "message": "I0190 - THE COMBINATION OF ADJUDICATION AND DISPOSAL CODE FOR CHARGE   1 IN MESSAGE 073RDIS000000S IS INVALID",
      "path": [
        "AnnotatedHearingOutcome",
        "HearingOutcome",
        "Case",
        "HearingDefendant",
        "ArrestSummonsNumber",
      ],
    },
  ],
  "PncQuery": {
    "checkName": "SEXOFFENCE",
    "courtCases": [
      {
        "courtCaseReference": "97/1626/008395Q",
        "offences": [
          {
            "adjudication": undefined,
            "disposals": undefined,
            "offence": {
              "acpoOffenceCode": "12:15:24:1",
              "cjsOffenceCode": "SX03001A",
              "endTime": undefined,
              "qualifier1": "",
              "qualifier2": "",
              "sequenceNumber": 1,
              "startDate": 2010-11-28T00:00:00.000Z,
              "startTime": "00:00",
              "title": "Attempt to rape a girl aged 13 / 14 / 15 years of age - SOA 2003",
            },
          },
          {
            "adjudication": undefined,
            "disposals": undefined,
            "offence": {
              "acpoOffenceCode": "12:15:24:1",
              "cjsOffenceCode": "SX03001",
              "endTime": undefined,
              "qualifier1": "",
              "qualifier2": "",
              "sequenceNumber": 2,
              "startDate": 2010-11-28T00:00:00.000Z,
              "startTime": "00:00",
              "title": "Rape a girl aged 13 / 14 / 15 - SOA 2003",
            },
          },
          {
            "adjudication": undefined,
            "disposals": undefined,
            "offence": {
              "acpoOffenceCode": "12:15:24:1",
              "cjsOffenceCode": "RT88191",
              "endTime": undefined,
              "qualifier1": "",
              "qualifier2": "",
              "sequenceNumber": 3,
              "startDate": 2010-11-28T00:00:00.000Z,
              "startTime": "00:00",
              "title": "Use a motor vehicle on a road / public place without third party insurance",
            },
          },
        ],
      },
    ],
    "forceStationCode": "01ZD",
    "penaltyCases": undefined,
    "pncId": "2000/0448754K",
  },
  "PncQueryDate": 2022-03-22T00:00:00.000Z,
}
`;

exports[`parseAhoXml converts AnnotatedHO2 XML to Aho 1`] = `
{
  "AnnotatedHearingOutcome": {
    "HearingOutcome": {
      "Case": {
        "CourtCaseReferenceNumber": "97/1626/008395Q",
        "CourtReference": {
          "MagistratesCourtReference": "01ZD0303208",
        },
        "ForceOwner": {
          "BottomLevelCode": "00",
          "OrganisationUnitCode": "01ZD00",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "ZD",
          "TopLevelCode": undefined,
        },
        "HearingDefendant": {
          "Address": {
            "AddressLine1": "Scenario1 Address Line 1",
            "AddressLine2": "Scenario1 Address Line 2",
            "AddressLine3": "Scenario1 Address Line 3",
            "AddressLine4": undefined,
            "AddressLine5": undefined,
          },
          "ArrestSummonsNumber": "0800NP0100000000001H",
          "BailConditions": [],
          "CourtPNCIdentifier": undefined,
          "DefendantDetail": {
            "BirthDate": 1948-11-11T00:00:00.000Z,
            "Gender": 1,
            "GeneratedPNCFilename": "SEXOFFENCE/TRPRFOUR",
            "PersonName": {
              "FamilyName": "SEXOFFENCE",
              "GivenName": [
                "TRPRFOUR",
              ],
              "Title": "Mr",
            },
          },
          "Offence": [
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2010-11-28T00:00:00.000Z,
              },
              "ActualOffenceWording": "Attempt to rape a girl aged 13 / 14 / 15 / years of age
                        - SOA 2003.",
              "AddedByTheCourt": undefined,
              "AlcoholLevel": undefined,
              "ArrestDate": 2010-12-01T00:00:00.000Z,
              "ChargeDate": 2010-12-02T00:00:00.000Z,
              "CommittedOnBail": "D",
              "ConvictionDate": 2011-09-26T00:00:00.000Z,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 1,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "K",
                  "DefendantOrOffenderSequenceNumber": "00000448754",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "01",
                    "OrganisationUnitCode": "01ZD01",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "ZD",
                    "TopLevelCode": undefined,
                  },
                  "Year": "11",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "SX",
                    "FullCode": "SX03001A",
                    "Qualifier": "A",
                    "Reason": "001",
                    "Year": "03",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": "001",
              },
              "HomeOfficeClassification": "019/11",
              "LocationOfOffence": "Kingston High Street",
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": true,
              "OffenceCategory": "CI",
              "OffenceTitle": "Offence with HO100102 - INCORRECTLY FORMATTED DATE EXCEPTION",
              "RecordableOnPNCindicator": true,
              "Result": [
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 3078,
                  "ConvictingCourt": undefined,
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": "SUM",
                  "NextCourtType": undefined,
                  "NextHearingDate": "false",
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 3078,
                  "PleaStatus": "NG",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Judgement with final result",
                  "ResultHalfLifeHours": 72,
                  "ResultHearingDate": 2011-09-26T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [],
                  "ResultVariableText": "Travel Restriction Order",
                  "SourceOrganisation": {
                    "BottomLevelCode": "01",
                    "OrganisationUnitCode": "B01EF01",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "EF",
                    "TopLevelCode": "B",
                  },
                  "Urgent": undefined,
                  "Verdict": "G",
                  "WarrantIssueDate": undefined,
                },
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 3078,
                  "ConvictingCourt": undefined,
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": "SUM",
                  "NextCourtType": undefined,
                  "NextHearingDate": "203-12-aa",
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 3078,
                  "PleaStatus": "NG",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Judgement with final result",
                  "ResultHalfLifeHours": 72,
                  "ResultHearingDate": 2011-09-26T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [],
                  "ResultVariableText": "Travel Restriction Order",
                  "SourceOrganisation": {
                    "BottomLevelCode": "01",
                    "OrganisationUnitCode": "B01EF01",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "EF",
                    "TopLevelCode": "B",
                  },
                  "Urgent": undefined,
                  "Verdict": "G",
                  "WarrantIssueDate": undefined,
                },
              ],
            },
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2010-11-28T00:00:00.000Z,
              },
              "ActualOffenceWording": "Rape of a Female",
              "AddedByTheCourt": undefined,
              "AlcoholLevel": undefined,
              "ArrestDate": 2010-12-01T00:00:00.000Z,
              "ChargeDate": 2010-12-02T00:00:00.000Z,
              "CommittedOnBail": "D",
              "ConvictionDate": 2011-09-26T00:00:00.000Z,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 2,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "K",
                  "DefendantOrOffenderSequenceNumber": "00000448754",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "01",
                    "OrganisationUnitCode": "01ZD01",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "ZD",
                    "TopLevelCode": undefined,
                  },
                  "Year": "11",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "SX",
                    "FullCode": "SX03001",
                    "Qualifier": undefined,
                    "Reason": "001",
                    "Year": "03",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": "002",
              },
              "HomeOfficeClassification": "019/07",
              "LocationOfOffence": "Kingston High Street",
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": true,
              "OffenceCategory": "CI",
              "OffenceTitle": "Offence with HO100323 - COURT HAS PROVIDED AN ADJOURNMENT WITH
                        NO NEXT HEARING DATE EXCEPTION",
              "RecordableOnPNCindicator": true,
              "Result": [
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 3052,
                  "ConvictingCourt": "3211",
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": "SUM",
                  "NextCourtType": undefined,
                  "NextHearingDate": null,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": {
                    "BottomLevelCode": "",
                    "OrganisationUnitCode": "",
                    "SecondLevelCode": "",
                    "ThirdLevelCode": "",
                    "TopLevelCode": undefined,
                  },
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 3052,
                  "PleaStatus": "NONE",
                  "ReasonForOffenceBailConditions": "Condition",
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Adjournment pre Judgement",
                  "ResultHalfLifeHours": 24,
                  "ResultHearingDate": 2011-09-26T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [],
                  "ResultVariableText": "Some result variable text",
                  "SourceOrganisation": {
                    "BottomLevelCode": "01",
                    "OrganisationUnitCode": "B01EF01",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "EF",
                    "TopLevelCode": "B",
                  },
                  "Urgent": {
                    "urgency": 24,
                    "urgent": true,
                  },
                  "Verdict": undefined,
                  "WarrantIssueDate": undefined,
                },
              ],
            },
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2010-11-28T00:00:00.000Z,
              },
              "ActualOffenceWording": "Use a motor vehicle without third party insurance.",
              "AddedByTheCourt": undefined,
              "AlcoholLevel": undefined,
              "ArrestDate": 2010-12-01T00:00:00.000Z,
              "ChargeDate": 2010-12-02T00:00:00.000Z,
              "CommittedOnBail": "D",
              "ConvictionDate": 2011-09-26T00:00:00.000Z,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 3,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "K",
                  "DefendantOrOffenderSequenceNumber": "00000448754",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "01",
                    "OrganisationUnitCode": "01ZD01",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "ZD",
                    "TopLevelCode": undefined,
                  },
                  "Year": "11",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "RT",
                    "FullCode": "RT88191",
                    "Qualifier": undefined,
                    "Reason": "191",
                    "Year": "88",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": "003",
              },
              "HomeOfficeClassification": "809/01",
              "LocationOfOffence": "Kingston High Street",
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": false,
              "OffenceCategory": "CM",
              "OffenceTitle": "Offence with no exceptions",
              "RecordableOnPNCindicator": false,
              "Result": [
                {
                  "AmountSpecifiedInResult": [
                    {
                      "Amount": 100,
                      "DecimalPlaces": 2,
                      "Type": "Fine",
                    },
                  ],
                  "BailCondition": [],
                  "CJSresultCode": 1015,
                  "ConvictingCourt": undefined,
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": "SUM",
                  "NextCourtType": undefined,
                  "NextHearingDate": undefined,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 1015,
                  "PleaStatus": "NG",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Judgement with final result",
                  "ResultHalfLifeHours": 72,
                  "ResultHearingDate": 2011-09-26T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [],
                  "ResultVariableText": "Fined 100.",
                  "SourceOrganisation": {
                    "BottomLevelCode": "01",
                    "OrganisationUnitCode": "B01EF01",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "EF",
                    "TopLevelCode": "B",
                  },
                  "Urgent": undefined,
                  "Verdict": "G",
                  "WarrantIssueDate": undefined,
                },
              ],
            },
          ],
          "OrganisationName": undefined,
          "PNCCheckname": "SEXOFFENCE",
          "PNCIdentifier": "2000/0448754K",
          "ReasonForBailConditions": undefined,
          "RemandStatus": "UB",
        },
        "ManualForceOwner": undefined,
        "PTIURN": "01ZD0303208",
        "PenaltyNoticeCaseReferenceNumber": undefined,
        "PreChargeDecisionIndicator": false,
        "RecordableOnPNCindicator": true,
        "Urgent": {
          "urgency": 24,
          "urgent": true,
        },
      },
      "Hearing": {
        "CourtHearingLocation": {
          "BottomLevelCode": "01",
          "OrganisationUnitCode": "B01EF01",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "EF",
          "TopLevelCode": "B",
        },
        "CourtHouseCode": 2576,
        "CourtHouseName": "London Croydon",
        "CourtType": "MCA",
        "DateOfHearing": 2011-09-26T00:00:00.000Z,
        "DefendantPresentAtHearing": "
                A",
        "HearingDocumentationLanguage": "D",
        "HearingLanguage": "D",
        "SourceReference": {
          "DocumentName": "SPI TRPRFOUR SEXOFFENCE",
          "DocumentType": "SPI Case Result",
          "UniqueID": "CID-8bc6ee0a-46ac-4a0e-b9be-b03e3b041415",
        },
        "TimeOfHearing": "10:00",
      },
    },
  },
  "Exceptions": [
    {
      "code": "HO100321",
      "path": [
        "AnnotatedHearingOutcome",
        "HearingOutcome",
        "Case",
        "HearingDefendant",
        "ArrestSummonsNumber",
      ],
    },
    {
      "code": "HO100102",
      "path": [
        "AnnotatedHearingOutcome",
        "HearingOutcome",
        "Case",
        "HearingDefendant",
        "Offence",
        0,
        "Result",
        0,
        "NextHearingDate",
      ],
    },
    {
      "code": "HO100102",
      "path": [
        "AnnotatedHearingOutcome",
        "HearingOutcome",
        "Case",
        "HearingDefendant",
        "Offence",
        0,
        "Result",
        1,
        "NextHearingDate",
      ],
    },
    {
      "code": "HO100322",
      "path": [
        "AnnotatedHearingOutcome",
        "HearingOutcome",
        "Case",
        "HearingDefendant",
        "Offence",
        1,
        "Result",
        0,
        "NextResultSourceOrganisation",
        "OrganisationUnitCode",
      ],
    },
    {
      "code": "HO100323",
      "path": [
        "AnnotatedHearingOutcome",
        "HearingOutcome",
        "Case",
        "HearingDefendant",
        "Offence",
        1,
        "Result",
        0,
        "NextHearingDate",
      ],
    },
    {
      "code": "HO100321",
      "path": [
        "HearingOutcome",
        "Case",
        "HearingDefendant",
        "ArrestSummonsNumber",
      ],
    },
    {
      "code": "HO100102",
      "path": [
        "HearingOutcome",
        "Case",
        "HearingDefendant",
        "Offence",
        0,
        "Result",
        0,
        "NextHearingDate",
      ],
    },
    {
      "code": "HO100102",
      "path": [
        "HearingOutcome",
        "Case",
        "HearingDefendant",
        "Offence",
        0,
        "Result",
        1,
        "NextHearingDate",
      ],
    },
    {
      "code": "HO100322",
      "path": [
        "HearingOutcome",
        "Case",
        "HearingDefendant",
        "Offence",
        1,
        "Result",
        "NextResultSourceOrganisation",
        "OrganisationUnitCode",
      ],
    },
    {
      "code": "HO100323",
      "path": [
        "HearingOutcome",
        "Case",
        "HearingDefendant",
        "Offence",
        1,
        "Result",
        "NextHearingDate",
      ],
    },
  ],
  "PncQuery": {
    "checkName": "SEXOFFENCE",
    "courtCases": [
      {
        "courtCaseReference": "97/1626/008395Q",
        "offences": [
          {
            "adjudication": undefined,
            "disposals": undefined,
            "offence": {
              "acpoOffenceCode": "12:15:24:1",
              "cjsOffenceCode": "SX03001A",
              "endTime": undefined,
              "qualifier1": "",
              "qualifier2": "",
              "sequenceNumber": 1,
              "startDate": 2010-11-28T00:00:00.000Z,
              "startTime": "00:00",
              "title": "Offence with HO100102 - INCORRECTLY FORMATTED DATE EXCEPTION",
            },
          },
          {
            "adjudication": undefined,
            "disposals": undefined,
            "offence": {
              "acpoOffenceCode": "12:15:24:1",
              "cjsOffenceCode": "SX03001",
              "endTime": undefined,
              "qualifier1": "",
              "qualifier2": "",
              "sequenceNumber": 2,
              "startDate": 2010-11-28T00:00:00.000Z,
              "startTime": "00:00",
              "title": "Offence with HO100323 - COURT HAS PROVIDED AN ADJOURNMENT WITH NO NEXT HEARING DATE EXCEPTION",
            },
          },
          {
            "adjudication": undefined,
            "disposals": undefined,
            "offence": {
              "acpoOffenceCode": "12:15:24:1",
              "cjsOffenceCode": "RT88191",
              "endTime": undefined,
              "qualifier1": "",
              "qualifier2": "",
              "sequenceNumber": 3,
              "startDate": 2010-11-28T00:00:00.000Z,
              "startTime": "00:00",
              "title": "Offence with no exceptions",
            },
          },
        ],
      },
    ],
    "forceStationCode": "01ZD",
    "penaltyCases": undefined,
    "pncId": "2000/0448754K",
  },
  "PncQueryDate": 2022-03-22T00:00:00.000Z,
}
`;
